TEST(API) Ajout de test controller et modification des controllers afin de valider les tests